@@ -1,0 +1,5 @@
+# $Id: Makefile.am,v 1.1 2001-09-25 12:26:49 thep Exp $
+SUBDIRS = man3
+
+MAINTAINERCLEANFILES = Makefile.in
+
